--- a/Inspection.ipynb
+++ b/Inspection.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,10 +128,7 @@
     "def compute(zindex, l, pz, l1, lmax, Ntheta):\n",
     "    res_beam, res_nobeam = dCl_obj.dCl_lm_Term5(zindex, l, l1, pz, l_max=lmax, N_theta=Ntheta, beam='both')\n",
     "    # res6 = dCl_obj.dCl_lp_Term6(zindex, l, l1, pz, l_max=lmax, N_theta=Ntheta)\n",
-    "    return res_beam, res_nobeam\n",
-    "\n",
-    "def compute_test(zindex, l, pz, l1, lmax, Ntheta):\n",
-    "    return 0., 1."
+    "    return res_beam, res_nobeam\n"
    ]
   },
   {
@@ -218,33 +215,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "303"
+       "(302, [tensor(165.), tensor(0.0158)])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "456 - zindex * i"
+    "456 - zindex * (i+1), p"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(tensor(-4064767.8803), tensor(-18382521.9085)), (tensor(-40647678.7277), tensor(-1.8383e+08)), (tensor(-4.0648e+08), tensor(-1.8383e+09)), (tensor(-4.0647e+09), tensor(-1.8382e+10)), (tensor(-4.0569e+10), tensor(-1.8347e+11)), (tensor(-6.4108e+10), tensor(-2.8992e+11)), (tensor(-1.0086e+11), tensor(-4.5611e+11)), (tensor(-1.5689e+11), tensor(-7.0951e+11)), (tensor(-2.3714e+11), tensor(-1.0725e+12)), (tensor(-3.3252e+11), tensor(-1.5038e+12)), (tensor(-3.7902e+11), tensor(-1.7141e+12)), (tensor(-3.2006e+11), tensor(-1.4475e+12)), (tensor(-1.6567e+11), tensor(-7.4925e+11)), (tensor(5.9722e+10), tensor(2.7007e+11)), (tensor(3.2707e+11), tensor(1.4791e+12)), (tensor(6.1005e+11), tensor(2.7589e+12)), (tensor(8.8894e+11), tensor(4.0202e+12)), (tensor(1.1519e+12), tensor(5.2095e+12)), (tensor(1.3990e+12), tensor(6.3271e+12)), (tensor(1.6231e+12), tensor(7.3405e+12)), (tensor(1.8258e+12), tensor(8.2573e+12)), (tensor(2.0101e+12), tensor(9.0910e+12)), (tensor(2.1788e+12), tensor(9.8543e+12)), (tensor(2.3335e+12), tensor(1.0554e+13)), (tensor(2.4739e+12), tensor(1.1189e+13)), (tensor(2.5990e+12), tensor(1.1755e+13)), (tensor(2.7067e+12), tensor(1.2242e+13)), (tensor(2.7941e+12), tensor(1.2638e+13)), (tensor(2.8576e+12), tensor(1.2925e+13)), (tensor(2.8937e+12), tensor(1.3089e+13)), (tensor(2.8995e+12), tensor(1.3116e+13)), (tensor(2.8735e+12), tensor(1.2998e+13)), (tensor(2.8160e+12), tensor(1.2739e+13)), (tensor(2.7295e+12), tensor(1.2348e+13)), (tensor(2.6187e+12), tensor(1.1847e+13)), (tensor(2.4909e+12), tensor(1.1269e+13)), (tensor(2.3556e+12), tensor(1.0658e+13)), (tensor(2.2245e+12), tensor(1.0065e+13)), (tensor(2.1102e+12), tensor(9.5487e+12)), (tensor(2.0243e+12), tensor(9.1601e+12)), (tensor(1.9743e+12), tensor(8.9344e+12)), (tensor(1.9622e+12), tensor(8.8799e+12)), (tensor(1.9834e+12), tensor(8.9762e+12)), (tensor(2.0285e+12), tensor(9.1806e+12)), (tensor(2.0858e+12), tensor(9.4399e+12)), (tensor(2.1439e+12), tensor(9.7034e+12)), (tensor(2.1942e+12), tensor(9.9312e+12)), (tensor(2.2310e+12), tensor(1.0098e+13)), (tensor(2.2519e+12), tensor(1.0193e+13)), (tensor(2.2567e+12), tensor(1.0215e+13)), (tensor(2.2472e+12), tensor(1.0172e+13)), (tensor(2.2256e+12), tensor(1.0075e+13)), (tensor(2.1948e+12), tensor(9.9365e+12)), (tensor(2.1574e+12), tensor(9.7678e+12)), (tensor(2.1157e+12), tensor(9.5795e+12)), (tensor(2.0716e+12), tensor(9.3803e+12)), (tensor(2.0265e+12), tensor(9.1767e+12)), (tensor(1.9814e+12), tensor(8.9734e+12)), (tensor(1.9371e+12), tensor(8.7734e+12)), (tensor(1.8939e+12), tensor(8.5782e+12)), (tensor(1.8518e+12), tensor(8.3883e+12)), (tensor(1.8108e+12), tensor(8.2032e+12)), (tensor(1.7706e+12), tensor(8.0221e+12)), (tensor(1.7313e+12), tensor(7.8445e+12)), (tensor(1.6926e+12), tensor(7.6701e+12)), (tensor(1.6547e+12), tensor(7.4989e+12)), (tensor(1.6175e+12), tensor(7.3312e+12)), (tensor(1.5811e+12), tensor(7.1672e+12)), (tensor(1.3893e+12), tensor(6.3023e+12)), (tensor(1.2248e+12), tensor(5.5609e+12)), (tensor(1.0865e+12), tensor(4.9386e+12)), (tensor(9.7173e+11), tensor(4.4233e+12)), (tensor(8.7771e+11), tensor(4.0026e+12)), (tensor(8.0018e+11), tensor(3.6573e+12)), (tensor(7.3723e+11), tensor(3.3790e+12)), (tensor(6.8555e+11), tensor(3.1531e+12)), (tensor(6.4301e+11), tensor(2.9700e+12)), (tensor(6.0756e+11), tensor(2.8208e+12)), (tensor(5.7738e+11), tensor(2.6976e+12)), (tensor(5.5091e+11), tensor(2.5936e+12)), (tensor(5.2676e+11), tensor(2.5028e+12)), (tensor(4.6303e+11), tensor(2.2820e+12)), (tensor(3.9128e+11), tensor(2.0502e+12)), (tensor(3.0704e+11), tensor(1.7825e+12)), (tensor(2.1536e+11), tensor(1.4850e+12)), (tensor(1.2984e+11), tensor(1.1963e+12)), (tensor(6.2837e+10), tensor(9.4060e+11)), (tensor(2.1662e+10), tensor(7.1972e+11)), (tensor(4.6995e+09), tensor(5.4858e+11)), (tensor(6.1967e+08), tensor(4.0955e+11))]\n"
+     ]
+    }
+   ],
    "source": [
     "test_list = Parallel(n_jobs=N_JOBS, prefer='threads')(delayed(compute)(zindex, l, pz, l1_list[l1_index], lmax[l1_index], Ntheta[l1_index]) \n",
     "                                                        for l1_index in range(len(l1_list)))\n",
     "print(test_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-4.0648e+06, -1.8383e+07],\n",
+       "        [-4.0648e+07, -1.8383e+08],\n",
+       "        [-4.0648e+08, -1.8383e+09],\n",
+       "        [-4.0647e+09, -1.8382e+10],\n",
+       "        [-4.0569e+10, -1.8347e+11],\n",
+       "        [-6.4108e+10, -2.8992e+11],\n",
+       "        [-1.0086e+11, -4.5611e+11],\n",
+       "        [-1.5689e+11, -7.0951e+11],\n",
+       "        [-2.3714e+11, -1.0725e+12],\n",
+       "        [-3.3252e+11, -1.5038e+12],\n",
+       "        [-3.7902e+11, -1.7141e+12],\n",
+       "        [-3.2006e+11, -1.4475e+12],\n",
+       "        [-1.6567e+11, -7.4925e+11],\n",
+       "        [ 5.9722e+10,  2.7007e+11],\n",
+       "        [ 3.2707e+11,  1.4791e+12],\n",
+       "        [ 6.1005e+11,  2.7589e+12],\n",
+       "        [ 8.8894e+11,  4.0202e+12],\n",
+       "        [ 1.1519e+12,  5.2095e+12],\n",
+       "        [ 1.3990e+12,  6.3271e+12],\n",
+       "        [ 1.6231e+12,  7.3405e+12],\n",
+       "        [ 1.8258e+12,  8.2573e+12],\n",
+       "        [ 2.0101e+12,  9.0910e+12],\n",
+       "        [ 2.1788e+12,  9.8543e+12],\n",
+       "        [ 2.3335e+12,  1.0554e+13],\n",
+       "        [ 2.4739e+12,  1.1189e+13],\n",
+       "        [ 2.5990e+12,  1.1755e+13],\n",
+       "        [ 2.7067e+12,  1.2242e+13],\n",
+       "        [ 2.7941e+12,  1.2638e+13],\n",
+       "        [ 2.8576e+12,  1.2925e+13],\n",
+       "        [ 2.8937e+12,  1.3089e+13],\n",
+       "        [ 2.8995e+12,  1.3116e+13],\n",
+       "        [ 2.8735e+12,  1.2998e+13],\n",
+       "        [ 2.8160e+12,  1.2739e+13],\n",
+       "        [ 2.7295e+12,  1.2348e+13],\n",
+       "        [ 2.6187e+12,  1.1847e+13],\n",
+       "        [ 2.4909e+12,  1.1269e+13],\n",
+       "        [ 2.3556e+12,  1.0658e+13],\n",
+       "        [ 2.2245e+12,  1.0065e+13],\n",
+       "        [ 2.1102e+12,  9.5487e+12],\n",
+       "        [ 2.0243e+12,  9.1601e+12],\n",
+       "        [ 1.9743e+12,  8.9344e+12],\n",
+       "        [ 1.9622e+12,  8.8799e+12],\n",
+       "        [ 1.9834e+12,  8.9762e+12],\n",
+       "        [ 2.0285e+12,  9.1806e+12],\n",
+       "        [ 2.0858e+12,  9.4399e+12],\n",
+       "        [ 2.1439e+12,  9.7034e+12],\n",
+       "        [ 2.1942e+12,  9.9312e+12],\n",
+       "        [ 2.2310e+12,  1.0098e+13],\n",
+       "        [ 2.2519e+12,  1.0193e+13],\n",
+       "        [ 2.2567e+12,  1.0215e+13],\n",
+       "        [ 2.2472e+12,  1.0172e+13],\n",
+       "        [ 2.2256e+12,  1.0075e+13],\n",
+       "        [ 2.1948e+12,  9.9365e+12],\n",
+       "        [ 2.1574e+12,  9.7678e+12],\n",
+       "        [ 2.1157e+12,  9.5795e+12],\n",
+       "        [ 2.0716e+12,  9.3803e+12],\n",
+       "        [ 2.0265e+12,  9.1767e+12],\n",
+       "        [ 1.9814e+12,  8.9734e+12],\n",
+       "        [ 1.9371e+12,  8.7734e+12],\n",
+       "        [ 1.8939e+12,  8.5782e+12],\n",
+       "        [ 1.8518e+12,  8.3883e+12],\n",
+       "        [ 1.8108e+12,  8.2032e+12],\n",
+       "        [ 1.7706e+12,  8.0221e+12],\n",
+       "        [ 1.7313e+12,  7.8445e+12],\n",
+       "        [ 1.6926e+12,  7.6701e+12],\n",
+       "        [ 1.6547e+12,  7.4989e+12],\n",
+       "        [ 1.6175e+12,  7.3312e+12],\n",
+       "        [ 1.5811e+12,  7.1672e+12],\n",
+       "        [ 1.3893e+12,  6.3023e+12],\n",
+       "        [ 1.2248e+12,  5.5609e+12],\n",
+       "        [ 1.0865e+12,  4.9386e+12],\n",
+       "        [ 9.7173e+11,  4.4233e+12],\n",
+       "        [ 8.7771e+11,  4.0026e+12],\n",
+       "        [ 8.0018e+11,  3.6573e+12],\n",
+       "        [ 7.3723e+11,  3.3790e+12],\n",
+       "        [ 6.8555e+11,  3.1531e+12],\n",
+       "        [ 6.4301e+11,  2.9700e+12],\n",
+       "        [ 6.0756e+11,  2.8208e+12],\n",
+       "        [ 5.7738e+11,  2.6976e+12],\n",
+       "        [ 5.5091e+11,  2.5936e+12],\n",
+       "        [ 5.2676e+11,  2.5028e+12],\n",
+       "        [ 4.6303e+11,  2.2820e+12],\n",
+       "        [ 3.9128e+11,  2.0502e+12],\n",
+       "        [ 3.0704e+11,  1.7825e+12],\n",
+       "        [ 2.1536e+11,  1.4850e+12],\n",
+       "        [ 1.2984e+11,  1.1963e+12],\n",
+       "        [ 6.2837e+10,  9.4060e+11],\n",
+       "        [ 2.1662e+10,  7.1972e+11],\n",
+       "        [ 4.6995e+09,  5.4858e+11],\n",
+       "        [ 6.1967e+08,  4.0955e+11]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tc.tensor(test_list).reshape((len(l1_list), 2))"
    ]
   },
   {
