--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -215,7 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$\\sigma_\\mathrm{T}^2$ at $z=0$ : 4.1206569773879047e-07 $\\mathrm{K}^2$\n",
+      "$\\sigma_\\mathrm{T}^2$ at $z=0$ : 1.3386905916387097e-08 $\\mathrm{K}^2$\n",
       "The volume of pixel at different redshifts are  tensor([ 343.1347,  632.5214, 1012.0041, 1477.1676, 2021.4597, 2637.2380,\n",
       "        3316.5296, 4051.5351]) Mpc^3\n"
      ]
@@ -229,8 +229,8 @@
     "theta_b = 1.02 * wavelength / Ddish * 180/np.pi # deg\n",
     "As = 8000           # deg^2\n",
     "\n",
-    "Ntot = 64\n",
-    "Tobs = 1e3 * 3600   # s\n",
+    "Ntot = 197 # 64\n",
+    "Tobs = 1e4 * 3600   # s\n",
     "Skycover = 20000    # deg^2\n",
     "Ttot = Ntot * (As / Skycover) * Tobs # seconds\n",
     "\n",
@@ -243,6 +243,13 @@
     "volume = (theta_b * np.pi / 180. * dCl_obj.chi_of_z)**2 * dz\n",
     "print(r'The volume of pixel at different redshifts are ', volume, 'Mpc^3')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -983,7 +990,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "yuwen",
+   "display_name": "py38",
    "language": "python",
    "name": "python3"
   },
@@ -997,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
