correct the beam for ACT f220

--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1297,7 @@
     "# arXiv:2503.14451\n",
     "freqs_ACT = np.array([90., 150., 220.])\n",
     "noise_ACT = np.array([14., 14., 64.])\n",
-    "beam_ACT  = np.array([1.42, 2.07, .01])\n",
+    "beam_ACT  = np.array([1.42, 2.07, 1.01])\n",
     "flux_ACT  = np.array([6.5, 8.4, 29.])\n",
     "\n",
     "ls_ACT, ilc_power_ACT = foregrounds.ilc_power(freqs=freqs_ACT, noises=noise_ACT, beams=beam_ACT, flux_limits_mJy=flux_ACT)\n",
